src/objects/Daily_Performance__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Daily Performance</relationshipLabel>
        <relationshipName>Daily_Performance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_of_Escalated_Calls__c</fullName>
        <label>Number of Escalated Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Calls__c</fullName>
        <label>Total Number of Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Daily Performance</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Daily Performance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>